[package]
name = "wecraw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.3"
reqwest = { version = "0.12.4", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tiny_http = "0.12.0"
